loga scale for histogram; fix scroll when cropped view

--- a/source/app/components/wi-d3-histogram/wi-d3-histogram.less
+++ b/source/app/components/wi-d3-histogram/wi-d3-histogram.less
@@ -19,3 +19,11 @@ wi-d3-histogram {
 .hide-grid svg .tick line {
     display: none;
 }
+g.vi-histogram-axis-x-ticks {
+    .tick text {
+        display: none;
+    }
+    .tick.majorX text {
+        display: block;
+    }
+}
